# differential-datalog

rust/template/: Cargo.toml
rust/template/differential_datalog/: lib.rs  program.rs
rust/template/observe/: lib.rs
rust/template/src/: channel.rs  lib.rs  server.rs
rust/template/tcp_channel/: lib.rs
src/Language/DifferentialDatalog/: Compile.hs
test/datalog_tests/: ddd.dl  vip_fwd.dl
test/datalog_tests/async_receiver/src/: main.rs
test/datalog_tests/lr/: left.dl  right.dl
test/datalog_tests/receiver/: Cargo.toml
test/datalog_tests/receiver/src/: main.rs
test/datalog_tests/sender/: Cargo.toml
test/datalog_tests/sender/src/: main.rs
test/datalog_tests/server_api/src/: main.rs
test/datalog_tests/tcp_a/src/: main.rs
test/datalog_tests/tcp_b/src/: main.rs
test/datalog_tests/tcp_down/src/: main.rs
test/datalog_tests/tcp_left/src/: main.rs
test/datalog_tests/tcp_receiver/: Cargo.toml
test/datalog_tests/tcp_receiver/src/: main.rs
test/datalog_tests/tcp_right/src/: main.rs
test/datalog_tests/tcp_sender/: Cargo.toml
test/datalog_tests/tcp_up/src/: main.rs
test/datalog_tests/vip_controller/: Cargo.toml
test/datalog_tests/vip_controller/src/: main.rs
test/datalog_tests/vip_fwd/: controller.dl  host.dl  types.dl
test/datalog_tests/vip_fwd/controller_ddlog/: Cargo.toml  controller.dot
test/datalog_tests/vip_fwd/host_ddlog/: Cargo.toml  host.dot
test/datalog_tests/vip_host_a/: Cargo.toml
test/datalog_tests/vip_host_a/src/: main.rs
test/datalog_tests/vip_host_b/: Cargo.toml
test/datalog_tests/vip_host_b/src/: main.rs
(+6 files in other folders)
